fix timeline event left spacing

--- a/SCSS/ckm.scss
+++ b/SCSS/ckm.scss
@@ -72,6 +72,11 @@ $gutter-xl:      1.0909rem * 2;
 
         @media screen and (max-width: 38.75em) { flex-wrap: wrap; }
 
+        @media screen and (min-width: 55em) { margin-left: -$gutter-l; }
+        @media screen and (min-width: 59.6875em) { margin-left: -$gutter-s; }
+        @media screen and (min-width: 68.75em) { margin-left: -$gutter-m; }
+        @media screen and (min-width: 77.5em) { margin-left: -$gutter-l; }
+
         &.has-post-thumbnail {
             padding-top: 5%;
 
